[gd_scene load_steps=13 format=3 uid="uid://bgw2tanm4il3j"]

[ext_resource type="Script" path="res://avatars/tunnelvrplayeravatar/VRPlayerAvatar.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dqc0gtk8ekr8u" path="res://xrassets/ovr_right_hand_model.glb" id="3"]
[ext_resource type="PackedScene" uid="uid://cpgv6grdpa0ny" path="res://xrassets/ovr_left_hand_model.glb" id="5"]
[ext_resource type="PackedScene" path="res://xrassets/right_quest2_contoller.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://cgr1r84ekajtk" path="res://xrassets/ovr_left_hand_model_b.glb" id="6_k6jvt"]
[ext_resource type="PackedScene" uid="uid://c83vlx50waes5" path="res://xrassets/left_quest2_controller.tscn" id="7"]

[sub_resource type="BoxMesh" id="1"]
size = Vector3(0.2, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="2"]
albedo_color = Color(0.105882, 0.188235, 0.509804, 1)

[sub_resource type="SphereMesh" id="3"]
radius = 0.14
height = 0.3
radial_segments = 24
rings = 24

[sub_resource type="StandardMaterial3D" id="4"]
albedo_color = Color(0.741176, 0.623529, 0.584314, 1)

[sub_resource type="CylinderShape3D" id="5"]
margin = 0.02
height = 0.05
radius = 0.4

[sub_resource type="CylinderMesh" id="6"]
top_radius = 0.4
bottom_radius = 0.4
height = 0.05
radial_segments = 32
rings = 0

[node name="VRPlayerAvatar" type="Node3D"]
script = ExtResource("2")

[node name="HeadCam" type="CSGMesh3D" parent="."]
mesh = SubResource("1")
material = SubResource("2")

[node name="skullcomponent" type="CSGMesh3D" parent="HeadCam"]
transform = Transform3D(0.9, 0, 0, 0, 1, 0, 0, 0, 0.98, 0, -0.051, 0.085)
mesh = SubResource("3")
material = SubResource("4")

[node name="ControllerLeft" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.307861, -0.332077, -0.346588)

[node name="left_quest2_controller" parent="ControllerLeft" instance=ExtResource("7")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.15)

[node name="left_quest2_controller_world" parent="ControllerLeft/left_quest2_controller" index="1"]
show_rest_only = true

[node name="ControllerRight" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.319285, -0.267242, -0.39732)

[node name="right_quest2_contoller" parent="ControllerRight" instance=ExtResource("6")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.15)

[node name="right_quest2_controller_world" parent="ControllerRight/right_quest2_contoller" index="0"]
show_rest_only = true
bones/0/position = Vector3(0, 0, 0)
bones/0/rotation = Quaternion(0, 0, 0, 1)
bones/0/scale = Vector3(1, 1, 1)
bones/1/position = Vector3(0, 0, 0)
bones/1/rotation = Quaternion(0, 0, 0, 1)
bones/1/scale = Vector3(1, 1, 1)
bones/2/position = Vector3(0, 0, 0)
bones/2/rotation = Quaternion(0, 0, 0, 1)
bones/2/scale = Vector3(1, 1, 1)
bones/3/position = Vector3(0, 0, 0)
bones/3/rotation = Quaternion(0, 0, 0, 1)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0, 0, 0)
bones/4/rotation = Quaternion(0, 0, 0, 1)
bones/4/scale = Vector3(1, 1, 1)
bones/5/position = Vector3(0, 0, 0)
bones/5/rotation = Quaternion(0, 0, 0, 1)
bones/5/scale = Vector3(1, 1, 1)

[node name="PaddleBody" type="CharacterBody3D" parent="ControllerRight"]
transform = Transform3D(0.752357, 0.658755, 0, -0.658755, 0.752357, 0, 0, 0, 1, 0.011775, -0.044319, -0.348128)
visible = false
collision_layer = 4100
collision_mask = 4100

[node name="CollisionShape3D" type="CollisionShape3D" parent="ControllerRight/PaddleBody"]
transform = Transform3D(0.704795, 0.709411, 0, -0.709411, 0.704795, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("5")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="ControllerRight/PaddleBody/CollisionShape3D"]
mesh = SubResource("6")

[node name="ovr_right_hand_model" parent="." instance=ExtResource("3")]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 0.337105, -0.42626, -0.236405)

[node name="ovr_left_hand_model_a" parent="." instance=ExtResource("5")]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -0.263509, -0.42626, -0.236405)
visible = false

[node name="ovr_left_hand_model" parent="." instance=ExtResource("6_k6jvt")]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, -0.310354, -0.37668)

[editable path="ControllerLeft/left_quest2_controller"]
[editable path="ControllerRight/right_quest2_contoller"]
[editable path="ovr_right_hand_model"]
[editable path="ovr_left_hand_model_a"]
[editable path="ovr_left_hand_model"]
